--- a/Client/OnlineExamer.Client.csproj
+++ b/Client/OnlineExamer.Client.csproj
@@ -16,5 +16,8 @@
   <ItemGroup>
     <ProjectReference Include="..\Shared\OnlineExamer.Shared.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Components\" />
+  </ItemGroup>
 
 </Project>
