--- a/OnlineExamer.Models/OnlineExamer.Models.csproj
+++ b/OnlineExamer.Models/OnlineExamer.Models.csproj
@@ -1,9 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
   </PropertyGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\OnlineExamer.Common\OnlineExamer.Common.csproj" />
     <ProjectReference Include="..\OnlineExamer.Data.Domain\OnlineExamer.Data.Domain.csproj" />
